set(srcs
    "src/script.c"
    "src/be_board_config_lib.c"
    "src/be_evse_lib.c"
    "src/be_aux_lib.c"
    "src/be_mqtt_client_lib.c"
    "src/be_modtab.c"
    "src/be_mapping_utils.c"
    "src/be_port.c"
    "lib/berry/src/be_api.c"
    "lib/berry/src/be_baselib.c"
    "lib/berry/src/be_bytecode.c"
    "lib/berry/src/be_byteslib.c"
    "lib/berry/src/be_class.c"
    "lib/berry/src/be_code.c"
    "lib/berry/src/be_debug.c"
    "lib/berry/src/be_debuglib.c"
    "lib/berry/src/be_exec.c"
    "lib/berry/src/be_filelib.c"
    "lib/berry/src/be_func.c"
    "lib/berry/src/be_gc.c"
    "lib/berry/src/be_gclib.c"
    "lib/berry/src/be_globallib.c"
    "lib/berry/src/be_introspectlib.c"
    "lib/berry/src/be_jsonlib.c"
    "lib/berry/src/be_lexer.c"
    "lib/berry/src/be_libs.c"
    "lib/berry/src/be_list.c"
    "lib/berry/src/be_listlib.c"
    "lib/berry/src/be_map.c"
    "lib/berry/src/be_maplib.c"
    "lib/berry/src/be_mathlib.c"
    "lib/berry/src/be_mem.c"
    "lib/berry/src/be_module.c"
    "lib/berry/src/be_object.c"
    "lib/berry/src/be_oslib.c"
    "lib/berry/src/be_parser.c"
    "lib/berry/src/be_rangelib.c"
    "lib/berry/src/be_repl.c"
    "lib/berry/src/be_solidifylib.c"
    "lib/berry/src/be_strictlib.c"
    "lib/berry/src/be_string.c"
    "lib/berry/src/be_strlib.c"
    "lib/berry/src/be_syslib.c"
    "lib/berry/src/be_timelib.c"
    "lib/berry/src/be_undefinedlib.c"
    "lib/berry/src/be_var.c"
    "lib/berry/src/be_vector.c"
    "lib/berry/src/be_vm.c"
    "lib/lua/lundump.c"
    "lib/lua/lmem.c"
    "lib/lua/ltm.c"
    "lib/lua/linit.c"
    "lib/lua/lbaselib.c"
    "lib/lua/lopcodes.c"
    "lib/lua/lauxlib.c"
    "lib/lua/lstrlib.c"
    "lib/lua/lcode.c"
    "lib/lua/lzio.c"
    "lib/lua/lvm.c"
    "lib/lua/ltablib.c"
    "lib/lua/lapi.c"
    "lib/lua/lstring.c"
    "lib/lua/llex.c"
    "lib/lua/lparser.c"
    "lib/lua/lmathlib.c"
    "lib/lua/liolib.c"
    "lib/lua/ldump.c"
    "lib/lua/ltable.c"
    "lib/lua/loslib.c"
    "lib/lua/lfunc.c"
    "lib/lua/lgc.c"
    "lib/lua/lcorolib.c"
    "lib/lua/loadlib.c"
    "lib/lua/lobject.c"
    "lib/lua/ldo.c"
    "lib/lua/ldblib.c"
    "lib/lua/lutf8lib.c"
    "lib/lua/lstate.c"
    "lib/lua/lctype.c"
    "lib/lua/ldebug.c"
    "src/lua_evse.c"
    )

idf_component_register(SRCS "${srcs}"
                    INCLUDE_DIRS "include" 
                    PRIV_INCLUDE_DIRS "src" "lib/berry/src" "lib/lua"
                    PRIV_REQUIRES nvs_flash app_update json mqtt driver esp_http_client esp_netif esp_wifi esp_timer esp_hw_support
                    REQUIRES network config evse peripherals protocols serial logger)

set_source_files_properties(lib/berry_mapping/src/be_cb_module.c PROPERTIES COMPILE_FLAGS -Wno-return-type)

set_source_files_properties(src/script.c PROPERTIES COMPILE_FLAGS -Wno-unused-value)